--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "^5.15.15",
     "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.0",
+    "@vis.gl/react-google-maps": "latest",
     "dotenv": "^16.4.5",
+    "google-maps-react": "^2.0.6",
     "heroicons-react": "^1.4.1",
     "joi": "^17.12.3",
     "react": "^18.2.0",
