--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_SERVER_URL=https://martserver.boostupdigital.in/api/v1
 VITE_COOKIE_EXPIRE_TIME=7200000 # 2 hours
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBF0k5AKWUMa-MbmKp-WcSB1Nde3IUMHEI
